  the path ``/`` and an empty one (issue ``#360``).
- The interactive debugger now tries to decode non-ascii filenames (issue
  ``#469``).
- Increased default key size of generated SSL certificates to 1024 bits (issue
  ``#611``).
- Added support for specifying a ``Response`` subclass to use when calling
  :func:`~werkzeug.utils.redirect`\ .

Version 0.9.7
-------------

(bugfix release, release date to be decided)

- Fix unicode problems in ``werkzeug.debug.tbtools``.
- Fix Python 3-compatibility problems in ``werkzeug.posixemulation``.
- Backport fix of fatal typo for ``ImmutableList`` (issue ``#492``).
- Make creation of the cache dir for ``FileSystemCache`` atomic (issue
  ``#468``).
- Use native strings for memcached keys to work with Python 3 client (issue
  ``#539``).
- Fix charset detection for ``werkzeug.debug.tbtools.Frame`` objects (issues
  ``#547`` and ``#532``).
- Fix ``AttributeError`` masking in ``werkzeug.utils.import_string`` (issue
  ``#182``).
- Explicitly shut down server (issue ``#519``).
- Fix timeouts greater than 2592000 being misinterpreted as UNIX timestamps in
  ``werkzeug.contrib.cache.MemcachedCache`` (issue ``#533``).
- Fix bug where ``werkzeug.exceptions.abort`` would raise an arbitrary subclass
  of the expected class (issue ``#422``).
- Fix broken ``jsrouting`` (due to removal of ``werkzeug.templates``)
- ``werkzeug.urls.url_fix`` now doesn't crash on malformed URLs anymore, but
  returns them unmodified. This is a cheap workaround for ``#582``, the proper
  fix is included in version 0.10.
- The repr of ``werkzeug.wrappers.Request`` doesn't crash on non-ASCII-values
  anymore (pull request ``#466``).
- Fix bug in ``cache.RedisCache`` when combined with ``redis.StrictRedis``
  object (pull request ``#583``).

Version 0.9.6
-------------

(bugfix release, released on June 7th 2014)

- Added a safe conversion for IRI to URI conversion and use that
  internally to work around issues with spec violations for